# ai-guide-creator

./: .gitignore  LICENSE  README.md  check_openai_usage.py  env.example  monitor_guide_creation.py  poem.txt  poem1.txt  poem2.txt  poem3.txt  pyproject.toml  run_with_monitoring.py  test_phoenix.py  test_phoenix_with_key.py
src/guide_creator_flow/: __init__.py  main.py  main_old.py  phoenix_config.py
src/guide_creator_flow/crews/content_crew/: content_crew.py  content_crew_old.py
src/guide_creator_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
src/guide_creator_flow/tools/: tracking_tools.py
tests/: __init__.py  run_tests.py  test_phoenix.py  test_phoenix_with_key.py
